<resources>
    <string name="app_name">Hostel</string>
    <string name="book_a_unique_place_to_stay">Book a Unique place to stay</string>
    <string name="with_over_a_million_hostels_world_wiide">With over a million hostels world wiide</string>
    <string name="login_signup">Login / Signup</string>
    <string name="save_time_save_money">Save time , save money!</string>
    <string name="sign_up_and_we_ll_send_the_best_deals_to_you">Sign up and we\'ll send the best deals to you</string>
    <string name="join_us">Join us</string>
    <string name="your_whatsapp_number">Your WhatsApp number</string>
    <string name="budjet_friendly_hostels_in_your_location">Budjet friendly hostels in your location</string>
    <string name="stay_safe_live_better">Stay Safe | Live Better</string>
    <string name="rose_villa">Rose Villa</string>
    <string name="_2_km_away">2 km Away</string>
    <string name="rs_6_500">Rs.6,500</string>
    <string name="book_now">Book Now</string>
    <string name="todo">TODO</string>
    <string name="terms_privacy_more"><![CDATA[Terms, Privacy & More]]></string>
    <string name="check_availability">Check Availability</string>
    <string name="rs_6_500">Rs.6,500</string>
    <string name="suggested_stays_around_you">Suggested Stays around you..</string>
    <string name="john_does_homes">John Does Homes</string>
    <string name="rs_5_000">Rs.5,000</string>
    <string name="todo">TODO</string>
</resources>
